# python-project-lvl4

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
task_manager/: mixins.py  settings.py  urls.py
task_manager/fixtures/: application_users.yaml  statuses.yaml
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/en/LC_MESSAGES/: django.po
task_manager/static/js/: bootstrap.bundle.js  bootstrap.js
task_manager/staticfiles/js/: bootstrap.js
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: index.html  main.html
task_manager/templates/labels/: list_of_labels.html
task_manager/templates/statuses/: list_of_statuses.html
task_manager/templates/tasks/: list_of_tasks.html
task_manager/templates/users/: list_of_users.html
task_manager/users/: admin.py  forms.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
