[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
authors = ["Adrianus West <adrianus_west@protonmail.com>"]
license = "MIT"
packages = [
  { include = "task_manager" },
]


[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
Django = "4.0.8"
django-bootstrap4 = "^22.2"
django-filter = "^22.1"
django-heroku = "^0.3.1"
rollbar = "^0.16.3"
dj-database-url = "^0.5.0"
whitenoise = "^6.2.0"
certifi = "^2022.12.7"
flake8-broken-line = "^0.6.0"
sqlparse = "^0.4.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8-bugbear = "^22.10.27"
charset-normalizer = "^3.0.0"


[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-blind-except = "^0.2.1"
flake8-broken-line = "^0.6.0"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^2.0.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.4.0"
flake8-import-order = "^0.18.1"
flake8-mutable = "^1.2.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^5.0.0"
flake8-string-format = "^0.3.0"
pep8-naming = "^0.13.2"
PyYAML = "^6.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
